--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.csource</groupId>
+  <groupId>com.mrhelloworld</groupId>
   <artifactId>fastdfs-client-java</artifactId>
   <version>1.29</version>
   <name>fastdfs-client-java</name>
